Better Responsive styles
Reason for change:
* Stylesheets were kind of a mess

Changes:
* Single quotes
* Move universal stuff into `base/base`
* Move lots of stuff out of the main layout into new files
* Clean up the mobile view a bunch
* Try to use more semantic markup and smaller files

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -66,6 +66,7 @@ PreCommit:
     description: 'Analyzing with scss-lint'
     required_executable: 'scss-lint'
     install_command: 'gem install scss-lint'
+    problem_on_unmodified_line: ignore
     include: '**/*.scss'
 
   SlimLint:
